--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -9,8 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        tools:context=".activities.EditProfileActivity">
+        android:padding="24dp">
 
         <ProgressBar
             android:id="@+id/progress_bar_edit"
@@ -20,8 +18,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:elevation="10dp"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/text_title_edit"
@@ -31,23 +28,23 @@
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/edit_profile_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nombre"
-            app:layout_constraintTop_toBottomOf="@id/text_title_edit"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/text_title_edit" />
 
         <EditText
             android:id="@+id/edit_profile_lastname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Apellido"
-            app:layout_constraintTop_toBottomOf="@id/edit_profile_name"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/edit_profile_name" />
 
         <EditText
             android:id="@+id/edit_profile_phone"
@@ -55,25 +52,26 @@
             android:layout_height="wrap_content"
             android:hint="Teléfono"
             android:inputType="phone"
-            app:layout_constraintTop_toBottomOf="@id/edit_profile_lastname"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/edit_profile_lastname" />
 
         <EditText
             android:id="@+id/edit_profile_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Correo Electrónico"
+            android:enabled="false"
             android:inputType="textEmailAddress"
-            app:layout_constraintTop_toBottomOf="@id/edit_profile_phone"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/edit_profile_phone" />
 
         <EditText
             android:id="@+id/edit_profile_company"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nombre de la compañía (opcional)"
-            app:layout_constraintTop_toBottomOf="@id/edit_profile_email"
-            android:layout_marginTop="8dp"/>
+            android:hint="Nombre de la compañía"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/edit_profile_email" />
 
         <TextView
             android:id="@+id/label_specialty"
@@ -82,43 +80,96 @@
             android:text="Especialidad:"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/edit_profile_company"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Spinner
             android:id="@+id/spinner_profile_specialty"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/label_specialty"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/label_specialty" />
 
         <EditText
             android:id="@+id/edit_profile_latitude"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Latitud"
-            android:inputType="numberDecimal|numberSigned"
-            app:layout_constraintTop_toBottomOf="@id/spinner_profile_specialty"
+            android:inputType="numberDecimal"
             android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/spinner_profile_specialty"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/edit_profile_longitude"/>
+            app:layout_constraintEnd_toStartOf="@id/edit_profile_longitude" />
 
         <EditText
             android:id="@+id/edit_profile_longitude"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Longitud"
-            android:inputType="numberDecimal|numberSigned"
+            android:inputType="numberDecimal"
             app:layout_constraintTop_toTopOf="@id/edit_profile_latitude"
             app:layout_constraintStart_toEndOf="@id/edit_profile_latitude"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- 🔥 Emergencias -->
+        <TextView
+            android:id="@+id/label_edit_emergencies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="¿Atiende emergencias 24/7?"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/edit_profile_longitude"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Switch
+            android:id="@+id/switch_edit_emergency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sí"
+            app:layout_constraintTop_toBottomOf="@id/label_edit_emergencies"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <!-- 🔥 Días de atención -->
+        <EditText
+            android:id="@+id/edit_profile_days"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Días de atención (Ej: Lunes a Sábado)"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/switch_edit_emergency" />
+
+        <!-- 🔥 Horarios -->
+        <LinearLayout
+            android:id="@+id/layout_hours"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/edit_profile_days">
+
+            <EditText
+                android:id="@+id/edit_profile_hours_from"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="De (Ej: 8:00 AM)" />
+
+            <EditText
+                android:id="@+id/edit_profile_hours_to"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:hint="A (Ej: 6:00 PM)" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/btn_save_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Guardar Cambios"
-            app:layout_constraintTop_toBottomOf="@id/edit_profile_latitude"
-            android:layout_marginTop="24dp"/>
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@id/layout_hours" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
