--- a/app/src/main/res/layout/activity_edit_ad.xml
+++ b/app/src/main/res/layout/activity_edit_ad.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,6 +19,24 @@
             android:inputType="textMultiLine"
             android:textSize="16sp" />
 
+        <!-- Imagen actual o nueva -->
+        <ImageView
+            android:id="@+id/image_preview"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="20dp"
+            android:background="#DDDDDD" />
+
+        <!-- Botón para seleccionar nueva imagen -->
+        <Button
+            android:id="@+id/btn_change_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cambiar imagen"
+            android:layout_marginTop="16dp" />
+
+        <!-- Botón guardar -->
         <Button
             android:id="@+id/btn_save_ad"
             android:layout_width="match_parent"
