--- a/app/src/main/res/layout/activity_edit_client_profile.xml
+++ b/app/src/main/res/layout/activity_edit_client_profile.xml
@@ -33,7 +33,7 @@
         android:id="@+id/edit_client_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Teléfono"
+        android:hint="Teléfono (con prefijo 52)"
         android:inputType="phone"
         android:layout_marginBottom="16dp"/>
 
