--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -50,7 +50,7 @@
             android:id="@+id/edit_profile_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Teléfono"
+            android:hint="Teléfono (con prefijo 52)"
             android:inputType="phone"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/edit_profile_lastname" />
