--- a/app/src/main/res/layout/activity_register_client.xml
+++ b/app/src/main/res/layout/activity_register_client.xml
@@ -31,7 +31,7 @@
         android:id="@+id/edit_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Teléfono"
+        android:hint="Teléfono(con prefijo 52)"
         app:layout_constraintTop_toBottomOf="@id/edit_lastname"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
