--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="blue">#2196F3</color>
     <color name="gray">#9E9E9E</color>
     <color name="green">#008000</color>
+    <color name="yellow">#FFD700</color>
     <color name="category_card_background">#9E9E9E</color>
 </resources>
