--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -42,6 +42,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_directory" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_open_qr_dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Mi QR de Cliente"
+        app:icon="@drawable/ic_qr_code"
+        app:backgroundTint="@color/red"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_find_nearby" />
+
     <TextView
         android:id="@+id/text_subtitle_categories"
         android:layout_width="wrap_content"
@@ -49,10 +61,10 @@
         android:text="O Selecciona una Categoría:"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_find_nearby" />
+        app:layout_constraintTop_toBottomOf="@id/btn_open_qr_dialog" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_categories"
@@ -90,6 +102,5 @@
         android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
